--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,3 +1,7 @@
+<link rel="stylesheet" href="/css/user_profile.css"/>
 <h1>FriendBook / <%= title %></h1>
-<p>Name: <%= user.name %></p>
-<p>Email: <%= user.email %></p>
+<form action="/users/logout" method="GET">
+    <p>Name: <%= user.name %></p>
+    <p>Email: <%= user.email %></p>
+    <button type="submit">Sign Out</button>
+</form>
