--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,1 +1,7 @@
-<h1>FriendBook / <%= title %></h1>
+
+<link rel="stylesheet" href="/css/user_profile.css">
+<h1>
+    FriendBook / Profile Page
+</h1>
+<p><%= user.name %></p>
+<p><%= user.email %></p>
