Set up scss and css files in assets folder and layout.ejs

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,8 @@
   <head>
     <title><%= title %></title>
     <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <%- style %>
     <!-- place all the styles from sub-pages which inherit from this layout here  -->
     <!-- it must be below styles for layout so that we can different styles for different sub-pages by over-riding the styles of layout page -->
