Modify scss files to design header footer and home.scss files

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,7 +13,7 @@
   <body>
     <%- include('partials/header'); -%>
     <!-- here both headers and footer are partials -->
-    <main>
+    <main id="layout-main">
       <!-- here main is a semantic html tag to define the main part of a page -->
       <%- body %>
       <!-- the value of this body is whatever comes from controllers and routes
@@ -21,9 +21,6 @@
     the content of home.ejs or profile.ejs gets filled here
     -->
     </main>
-    
-    
-
     <%- include('partials/footer'); -%> 
     <%- script %>
     <!-- all the scripts from subpages which inherit from this layout will be placed here -->
