--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header>
-    FriendBook
+    <h1>FriendBook</h1>
     <ul>
         <% if (locals.user){ %>
             <!-- if users is present in locals display the name and sign-out option -->
