--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,13 @@
+<link rel="stylesheet" href="/css/home.css">
 <h1>FriendBook / <%= title %></h1>
+<div id="home-container">
+    <section id="events-users">
+        <h1>Events / All Users</h1>
+    </section>
+    <section id="posts-timeline">
+        <h1>Wall/Timeline</h1>
+    </section>
+    <section id="friends">
+        <h1>Friends</h1>
+    </section>
+</div>
