--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,8 +4,15 @@
     <section id="events-users">
         <h1>Events / All Users</h1>
     </section>
-    <section id="posts-timeline">
+    <section id="posts-feed">
         <h1>Wall/Timeline</h1>
+        <h4>Posts</h4>
+        <!-- a form to create new posts -->
+        <form action="" id="new-post-form" method="POST">
+            <textarea name="content" cols="60" rows="7" placeholder="Type Here..."></textarea>
+            <input type="submit" value="Post">
+        </form>
+        <!-- post create form closed -->
     </section>
     <section id="friends">
         <h1>Friends</h1>
