Create actions and controllers for creating a new post and saving it to database

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
         <h1>Wall/Timeline</h1>
         <h4>Posts</h4>
         <!-- a form to create new posts -->
-        <form action="" id="new-post-form" method="POST">
+        <form action="/posts/create" id="new-post-form" method="POST">
             <textarea name="content" cols="60" rows="7" placeholder="Type Here..."></textarea>
             <input type="submit" value="Post">
         </form>
