--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -20,8 +20,29 @@ body{
         padding: 10px;
         padding-bottom: 100px;
         background-color: rgb(209, 226, 253);
-        text-align: center;
+        // this will style all the textarea inside posts-feed section
+        textarea{
+            width: 100%;
+            height: 150px;
+            padding: 12px 20px;
+            box-sizing: border-box;
+            border: 2px solid #ccc;
+            border-radius: 4px;
+            background-color: #f8f8f8;
+            font-size: 16px;
+            resize: none;
+        }
+        // here we style all buttons with type submit in the posts-feed section
+        input[type=submit] {
+            padding:5px 15px; 
+            background:#ccc; 
+            border:0 none;
+            cursor:pointer;
+            border-radius: 13px; 
+            font-weight: bold;
+        }
     }
+    
     #home-container #friends{
         width: 25%;
         padding: 10px;
