Delete post and associated comments

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -48,6 +48,6 @@ body{
         padding: 10px;
         border: 1px solid grey;
         padding-bottom: 100px;
-              
+        height: 100vh;         
     }
 }
