--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,74 +1,89 @@
-<link rel="stylesheet" href="/css/home.css">
+<link rel="stylesheet" href="/css/home.css" />
 <h1>FriendBook / <%= title %></h1>
 <div id="home-container">
-    <section id="events-users">
-        <h1>Events / All Users</h1>
-    </section>
-    <section id="posts-feed">
-        <h1>Wall/Timeline</h1>
-        <h4>Posts</h4>
-        <%if(locals.user){%>
-        <!-- show the form to create a post only if the user is signed in -->
-          <!-- a form to create new posts -->
-        <form action="/posts/create" id="new-post-form" method="POST">
-            <textarea name="content" cols="60" rows="7" placeholder="Type Here..." required></textarea>
-            <input type="submit" value="Post">
-        </form>
-          <!-- post create form closed -->
-        <%}%>
-        <!-- A container to display all the created posts -->
-        <div id="posts-list-container">
-            <ul>
-                <% for(post of posts) {%>
-                    <!-- here posts is coming from home action of home_controller -->
-                    <!-- this is the populated posts -->
-                 <li>
-                    <p>
-                      <%= post.content %> <br/>
-                      <small>
-                        <%= post.user.name %>
-                      </small>
-                      
-                    </p>
-                    <!-- Comments Container for each post -->
-                    <!-- A container for all the comments of a particular post -->
-                    <div class="post-comments">
-                      <!-- show the create-comment form only for a logged-in user -->
-                       <!-- show the comment submit form only to a signed-in user -->
-                      <% if(locals.user) { %>
-                        <!-- show the create-comment form only if user is logged-in -->
-                      <form action="/comments/create" method="POST">
-                          <input type="text" name="content" placeholder="Add Comments ...." required>
-                          <input type="hidden" name="post" value="<%= post._id %>">
-                          <!-- with each new comment we are sending post.id as a hidden value in post variable -->
-                           <!-- here we are passing post.id as a hidden value with the content of the comment -->
-                          <input type="submit" value="Add Comment">
-                      </form>
-                      <% } %>
-                        <!-- container to display comments for each post -->
-                        <div class="post-comments-list">
-                          <!-- every ul has id of post for which comments are craeted  -->
-                          <ul id="post_comments_<%= post._id %>">
-                            <% for(comment of post.comments) { %>
-                            <li>
-                              <p>
-                                <%= comment.content %><br />
-                                <%= comment.user.name %>
-                              </p>
-                            </li>  
-                            <% } %>
-                          </ul>
-                      </div>
-                      <!-- post-comments-list class div closed -->
-                  </div>
-                  <!-- post-comments div closed -->
-                 </li>
+  <section id="events-users">
+    <h1>Events / All Users</h1>
+  </section>
+  <section id="posts-feed">
+    <h1>Wall/Timeline</h1>
+    <h4>Posts</h4>
+    <%if(locals.user){%>
+    <!-- show the form to create a post only if the user is signed in -->
+    <!-- a form to create new posts -->
+    <form action="/posts/create" id="new-post-form" method="POST">
+      <textarea
+        name="content"
+        cols="60"
+        rows="7"
+        placeholder="Type Here..."
+        required
+      ></textarea>
+      <input type="submit" value="Post" />
+    </form>
+    <!-- post create form closed -->
+    <%}%>
+    <!-- A container to display all the created posts -->
+    <div id="posts-list-container">
+      <ul>
+        <% for(post of posts) {%>
+        <!-- here posts is coming from home action of home_controller -->
+        <!-- this is the populated posts -->
+        <li>
+          <% if(locals.user && (locals.user.id == post.user.id)) {%>
+          <!-- if user is signed-in and the signed-in user owns/created the post the post -->
+          <!-- only then show the delete option -->
+          <small>
+            <a href="/posts/destroy/<%= post.id %>">X</a>
+          </small>
+          <% } %>
+          <p>
+            <%= post.content %> <br />
+            <small> <%= post.user.name %> </small>
+          </p>
+          <!-- Comments Container for each post -->
+          <!-- A container for all the comments of a particular post -->
+          <div class="post-comments">
+            <!-- show the create-comment form only for a logged-in user -->
+            <!-- show the comment submit form only to a signed-in user -->
+            <% if(locals.user) { %>
+            <!-- show the create-comment form only if user is logged-in -->
+            <form action="/comments/create" method="POST">
+              <input
+                type="text"
+                name="content"
+                placeholder="Add Comments ...."
+                required
+              />
+              <input type="hidden" name="post" value="<%= post._id %>" />
+              <!-- with each new comment we are sending post.id as a hidden value in post variable -->
+              <!-- here we are passing post.id as a hidden value with the content of the comment -->
+              <input type="submit" value="Add Comment" />
+            </form>
+            <% } %>
+            <!-- container to display comments for each post -->
+            <div class="post-comments-list">
+              <!-- every ul has id of post for which comments are craeted  -->
+              <ul id="post_comments_<%= post._id %>">
+                <% for(comment of post.comments) { %>
+                <li>
+                  <p>
+                    <%= comment.content %><br />
+                    <small> <%= comment.user.name %> </small>
+                  </p>
+                </li>
                 <% } %>
-            </ul>
-        </div>
-        <!-- posts-list-container div closed -->
-    </section>
-    <section id="friends">
-        <h1>Friends</h1>
-    </section>
+              </ul>
+            </div>
+            <!-- post-comments-list class div closed -->
+          </div>
+          <!-- post-comments div closed -->
+        </li>
+        <% } %>
+      </ul>
+    </div>
+    <!-- posts-list-container div closed -->
+  </section>
+  <section id="friends">
+    <h1>Friends</h1>
+  </section>
 </div>
