--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -3,5 +3,21 @@
 <h1>
     FriendBook / Profile Page
 </h1>
-<p><%= user.name %></p>
-<p><%= user.email %></p>
+<% if(user.id == profile_user.id) { %>
+    <!-- if logged in user is same as the user clicking to update
+    only then show the update form -->
+    <form action="/users/update/<%= profile_user.id %>" method="POST">
+        <input type="text" name="name" placeholder="Your Name" value="<%= profile_user.name %>" required>
+        <!-- here value contains pre-filled name of signed-in/logged-in user -->
+        <input type="email" name="email" placeholder="Your Email" value="<%= profile_user.email %>" required>
+        <!-- here value contains pre-filled email of logged-in user -->
+        <input type="password" name="password" placeholder="Your Password" value="<%= profile_user.password %>" required>
+        <!-- here value contains pre-filled email of logged-in user -->
+
+        <input type="submit" value="Update">
+    </form>
+<% }else { %>
+    <!-- if logged in user is viewing someone's else profile then show only user.name and user.email  -->
+    <p><%= profile_user.name %></p>
+    <p><%= profile_user.email %></p>
+<% } %>
