--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,8 +4,8 @@
         <% if (locals.user){ %>
             <!-- if users is present in locals display the name and sign-out option -->
             <li>
-                <a href="/users/profile">
-                    <%= user.name %>
+                <a href="/users/profile/<%= locals.user.id %>">
+                    <%= locals.user.name %>
                 </a>
             </li>
             <li>
