--- a/assets/scss/user_profile.scss
+++ b/assets/scss/user_profile.scss
@@ -1,3 +1,25 @@
 body{
-    background-color:skyblue;
+    #user-profile{
+        margin: 40px auto;
+        width: 50%;
+        height: max-content;
+        form{
+            margin: 15px;
+            padding: 10px;
+            display: flex;
+            flex-direction: column;
+            
+            justify-content: space-around;
+            input[type=submit]{
+                margin: 5px;
+                padding:5px 15px; 
+                background:#ccc; 
+                border:0 none;
+                cursor:pointer;
+                border-radius: 13px; 
+                font-weight: bold;
+                width: max-content;
+            }
+        }
+    }
 }
