Remove all borders from form input except border-bottom

--- a/assets/css/user_sign_up.css
+++ b/assets/css/user_sign_up.css
@@ -19,7 +19,9 @@
     #top-container #sign-up-form form input {
       margin: 5px;
       height: 20px;
-      padding: 10px; }
+      padding: 10px;
+      border: none;
+      border-bottom: 1px solid grey; }
     #top-container #sign-up-form form input[type=submit] {
       background-color: #6e6eb6;
       height: 45px; }
