--- a/assets/css/user_sign_in.css
+++ b/assets/css/user_sign_in.css
@@ -17,7 +17,9 @@
     #top-container #sign-in-form form input {
       height: 20px;
       padding: 10px;
-      margin: 5px; }
+      margin: 5px;
+      border: none;
+      border-bottom: 1px solid grey; }
     #top-container #sign-in-form form input[type=submit] {
       background-color: #6e6eb6;
       height: 45px; }
