--- a/assets/scss/user_sign_in.scss
+++ b/assets/scss/user_sign_in.scss
@@ -19,10 +19,13 @@
             height: 20px;
             padding: 10px;
             margin: 5px;
+            border: none;
+            border-bottom: 1px solid grey;
         };
         input[type=submit]{
             background-color: rgb(110, 110, 182);
             height: 45px;
+
         }
     }
     h2{
