--- a/assets/scss/user_sign_up.scss
+++ b/assets/scss/user_sign_up.scss
@@ -21,6 +21,8 @@
             margin: 5px;
             height: 20px;
             padding: 10px;
+            border: none;
+            border-bottom: 1px solid grey;
         };
         input[type=submit]{
             background-color: rgb(110, 110, 182);
