--- a/assets/css/user_sign_up.css
+++ b/assets/css/user_sign_up.css
@@ -1,5 +1,5 @@
 #top-container {
-  background-color: yellow;
+  background-color: #d4d4d4;
   width: 30%;
   margin: 25px auto;
   height: max-content;
@@ -23,8 +23,11 @@
       border: none;
       border-bottom: 1px solid grey; }
     #top-container #sign-up-form form input[type=submit] {
-      background-color: #6e6eb6;
-      height: 45px; }
+      background-color: #6e6ef7;
+      height: 45px;
+      color: white;
+      font-size: 16px;
+      font-weight: bold; }
   #top-container #sign-up-google {
     display: flex;
     flex-direction: column;
@@ -32,8 +35,12 @@
     justify-content: space-between;
     margin: 10px; }
     #top-container #sign-up-google button {
+      border: none;
       height: 45px;
       padding: 10px;
-      background-color: aquamarine; }
+      background-color: #6e6ef7;
+      color: white;
+      font-size: 16px;
+      font-weight: bold; }
     #top-container #sign-up-google p {
       margin: auto; }
