--- a/assets/scss/user_profile.scss
+++ b/assets/scss/user_profile.scss
@@ -1,25 +1,43 @@
-body{
-    #user-profile{
-        margin: 40px auto;
-        width: 50%;
-        height: max-content;
-        form{
-            margin: 15px;
+#top-container{
+    background-color: rgb(212, 212, 212);
+    width: 30%;
+    margin: 25px auto;
+    height: max-content;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 10px;
+    img{
+        align-self: center;
+        width: 100px;
+        height: 100px;
+    }
+    #user-update-form form{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin: 10px;
+        input{
+            height: 20px;
             padding: 10px;
-            display: flex;
-            flex-direction: column;
-            
-            justify-content: space-around;
-            input[type=submit]{
-                margin: 5px;
-                padding:5px 15px; 
-                background:#ccc; 
-                border:0 none;
-                cursor:pointer;
-                border-radius: 13px; 
-                font-weight: bold;
-                width: max-content;
-            }
+            margin: 5px;
+            border: none;
+            border-bottom: 1px solid grey;
+        };
+        input[type=submit]{
+            background-color: rgb(110, 110, 247);
+            height: 45px;
+
         }
+
+    }
+    #user-details{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin: 10px;
     }
 }
