--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,22 +1,29 @@
 
 <link rel="stylesheet" href="/css/user_profile.css">
-<div id="user-profile">
+<div id="top-container">
+    <img src="<%= profile_user.avatar %>" alt="<% profile_user.name %>" height: "200" width:"200">
     <% if(user.id == profile_user.id) { %>
         <!-- if logged in user is same as the user clicking to update
         only then show the update form -->
-        <form action="/users/update/<%= profile_user.id %>" method="POST" enctype="multipart/form-data">
-            <input type="text" name="name" placeholder="Your Name" value="<%= profile_user.name %>" required>
-            <!-- here value contains pre-filled name of signed-in/logged-in user -->
-            <input type="email" name="email" placeholder="Your Email" value="<%= profile_user.email %>" required>
-            <!-- here value contains pre-filled email of logged-in user -->
-            <input type="password" name="password" placeholder="Your Password" value="<%= profile_user.password %>" required>
-            <!-- here value contains pre-filled email of logged-in user -->
-            <input type="file" name="avatar" placeholder="Profile Picture">    
-            <input type="submit" value="Update">
-        </form>
+        <div id="user-update-form">
+            <form action="/users/update/<%= profile_user.id %>" method="POST" enctype="multipart/form-data">
+                <input type="text" name="name" placeholder="Your Name" value="<%= profile_user.name %>" required>
+                <!-- here value contains pre-filled name of signed-in/logged-in user -->
+                <input type="email" name="email" placeholder="Your Email" value="<%= profile_user.email %>" required>
+                <!-- here value contains pre-filled email of logged-in user -->
+                <input type="password" name="password" placeholder="Your Password" value="<%= profile_user.password %>" required>
+                <!-- here value contains pre-filled email of logged-in user -->
+                <input type="file" name="avatar" placeholder="Upload Your Picture.....">    
+                <input type="submit" value="Update">
+            </form>
+        </div>
+        
     <% }else { %>
         <!-- if logged in user is viewing someone's else profile then show only user.name and user.email  -->
-        <p><%= profile_user.name %></p>
-        <p><%= profile_user.email %></p>
+        <div id="user-details">
+            <p><%= profile_user.name %></p>
+            <p><%= profile_user.email %></p>
+    
+        </div>
     <% } %>
 </div>
