--- a/assets/scss/user_sign_in.scss
+++ b/assets/scss/user_sign_in.scss
@@ -35,7 +35,7 @@
     h2{
         margin: auto;
     }
-    #forget-password{
+    #sign-in-google{
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
