--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -11,9 +11,8 @@
         </form>
     </div>
     <h2>or</h2>
-    <div id="forget-password">
-        <button> Forget Password</button>
-        
+    <div id="sign-in-google">
+        <button> <a href="/users/auth/google">Google SignUp/SignIn</a></button>    
     </div>    
     
 </div>
