--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -13,7 +13,7 @@
     </div>
     <h2>or</h2>
     <div id="sign-up-google">
-        <button> Sign Up with Google</button>
+        <button> <a href="/users/auth/google">Google SignUp/SignIn</a></button>
         <p> Already a user ? <a href="/users/sign-in">LOGIN</a></p>
     </div>    
 </div>
