Install and configure nodemailer to send mails to user when user posts a comment

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -37,7 +37,7 @@
         <% for(post of posts) {%>
         <!-- here posts is coming from home action of home_controller -->
         <!-- this is the populated posts -->
-          <%- include('partials/post'); -%>
+          <%- include('partials/posts'); -%>
         <% } %>
       </ul>
     </div>
