--- a/views/partials/posts.ejs
+++ b/views/partials/posts.ejs
@@ -6,7 +6,8 @@
     <small>
       <a href="/posts/destroy/<%= post.id %>">X</a>
     </small>
-    <% } %> <%= post.content %> <br />
+    <% } %> 
+    <%= post.content %> <br />
     <small> <%= post.user.name %> </small>
   </p>
   <!-- Comments Container for each post -->
