create Ajax Request for sending data on new-post-form

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -47,4 +47,5 @@
     <h1>Friends</h1>
   </section>
 </div>
+<!-- this is a script file home_posts.js to submit requests to add/delete a post via ajax -->
 <script src="/js/home_posts.js"></script>
